Initial project setup

--- a/PiCpp/PiCpp.vcxproj
+++ b/PiCpp/PiCpp.vcxproj
@@ -80,7 +80,8 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies />
+      <AdditionalDependencies>freetype.lib;FreeImaged.lib;FreeImagePlusd.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)freetype2\objs\$(Platform)\$(Configuration);$(ProjectDir)freeimage\Dist\$(Platform);$(ProjectDir)freeimage\Wrapper\FreeImagePlus\dist\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -107,7 +108,8 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies />
+      <AdditionalDependencies>freetype.dll</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)freetype2\objs\$(Platform)\$(Configuration);$(ProjectDir)freeimage\Dist\$(Platform);$(ProjectDir)freeimage\Wrapper\FreeImagePlus\dist\$(Platform);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
