--- a/PiCpp/PiCpp.vcxproj.filters
+++ b/PiCpp/PiCpp.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="Pi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FreeType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Pi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FreeType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
